Thu Apr 04 09:58:35 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update to note that automake 1.12.2 is now a hard
	  requirement.

Tue Apr 02 10:22:44 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Comment typo fixes.

Tue Apr 02 09:47:14 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Sync with latest
	  upstream version of lemon.  The only notable change is a bug fix for
	  platforms where sizeof(long) < sizeof(void*) (LLP64 model).

Tue Apr 02 05:51:12 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Tell vim to syntax highlight as rst.

Tue Apr 02 05:50:26 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update for recent changes to bootstrap.  In particular, we
	  now bootstrap snapshots with automake 1.13.1.

Fri Mar 29 05:18:11 GMT 2013  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Fix __WIN32__ conditional, accidentally broken in
	  last change to this file.

Thu Mar 28 04:19:26 GMT 2013  jiangwen jiang <jiangwen127@gmail.com>

	* api/expanddecider.cc,include/xapian/expanddecider.h,
	  tests/api_anydb.cc,tests/api_nodb.cc: Add ExpandDeciderFilterPrefix
	  class to only return terms with a particular prefix.  (fixes #467)

Thu Mar 21 23:55:26 GMT 2013  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test coverage for change to
	  QueryParser CJK handling in previous commit.

Thu Mar 21 07:21:30 GMT 2013  Greg Banks <gnb@fastmail.fm>

	* queryparser/cjk-tokenizer.cc,queryparser/termgenerator_internal.cc,
	  tests/termgentest.cc: Some CJK codepoints are also punctuation and
	  hence not word characters, and should not really be used as fodder
	  for generating N-grams.  Also fixes a pre-existing bug where every
	  second sequence of N-grammable CJK characters in the text failed to
	  generate the first 2-gram.

Sun Mar 17 20:45:48 GMT 2013  Olly Betts <olly@survex.com>

	* common/pretty.h: Restore space after comma in output.
